Init and add first content

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "is-vuejs-3-released-yet",
+  "name": "is-vue3-released-yet",
   "version": "0.1.0",
   "private": true,
   "scripts": {
