--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-gtag": "^1.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "^4.1.0",
